--- a/src/app/shop/cashier-opened/shopping-cart/shopping-cart.component.html
+++ b/src/app/shop/cashier-opened/shopping-cart/shopping-cart.component.html
@@ -4,8 +4,6 @@
       <form>
         <mat-form-field>
           <input #code cdkFocusInitial matInput placeholder="Barcode" type="text">
-          <mat-hint align="start">{{stockLabel()}}</mat-hint>
-          <mat-hint align="end">{{stockValue()}}</mat-hint>
         </mat-form-field>
         <button (click)="addBarcode(code.value); code.value=''" [disabled]="code.value === ''" color="primary"
                 mat-icon-button type="submit">
@@ -45,26 +43,25 @@
     </div>
   </mat-card-content>
 </mat-card>
+<!-------------------------------->
 <mat-card>
   <mat-card-title>
     <mat-icon color="primary">shopping_cart</mat-icon>
-    Shopping Cart {{totalShoppingCart() | currency:'EUR':'symbol'}}
+    Shopping Cart {{totalShoppingCart| currency:'EUR':'symbol'}}
   </mat-card-title>
   <mat-card-content>
-    <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <mat-table [dataSource]="shoppingCart" class="mat-elevation-z8">
       <ng-container matColumnDef="id">
-        <mat-header-cell *matHeaderCellDef fxFlex="5%">{{indexShoppingCart()}} #</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef fxFlex="5%">{{indexShoppingCart+1}} #</mat-header-cell>
         <mat-cell *matCellDef="let i = index" fxFlex="5%"> {{i + 1}}</mat-cell>
       </ng-container>
       <ng-container matColumnDef="description">
         <mat-header-cell *matHeaderCellDef fxFlex="28%"> Description</mat-header-cell>
-        <mat-cell *matCellDef="let item" [matTooltip]="item.code" fxFlex="28%"> {{item.description}}</mat-cell>
+        <mat-cell *matCellDef="let item" [matTooltip]="item.barcode" fxFlex="28%"> {{item.description}}</mat-cell>
       </ng-container>
       <ng-container matColumnDef="retailPrice">
-        <mat-header-cell *matHeaderCellDef fxFlex="11%"> Price</mat-header-cell>
-        <mat-cell *matCellDef="let item" fxFlex="11%">
-          <input [value]="priceLabel(item)" matInput readonly type="number"/>
-        </mat-cell>
+        <mat-header-cell *matHeaderCellDef fxFlex="11%"> Retail Price</mat-header-cell>
+        <mat-cell *matCellDef="let item" fxFlex="11%">{{item.retailPrice}}</mat-cell>
       </ng-container>
       <ng-container matColumnDef="amount">
         <mat-header-cell *matHeaderCellDef fxFlex="20%"> Nº</mat-header-cell>
@@ -80,24 +77,15 @@
       </ng-container>
       <ng-container matColumnDef="discount">
         <mat-header-cell *matHeaderCellDef fxFlex="12%"> %</mat-header-cell>
-        <mat-cell *matCellDef="let item" fxFlex="12%">
-          <input (blur)="updateDiscount(item, $event)" [disabled]="isArticleVarious(item.code)"
-                 [value]="discountLabel(item)" matInput
-                 type="number"
-          />
-        </mat-cell>
+        <mat-cell *matCellDef="let item" fxFlex="12%" (click)="updateDiscount(item)">{{item.discount}}</mat-cell>
       </ng-container>
       <ng-container matColumnDef="total">
         <mat-header-cell *matHeaderCellDef fxFlex="12%"> Total</mat-header-cell>
-        <mat-cell *matCellDef="let item" fxFlex="12%">
-          <input (blur)="updateTotal(item, $event)" [disabled]="isArticleVarious(item.code)" [value]="item.total"
-                 matInput
-                 type="number"/>
-        </mat-cell>
+        <mat-cell *matCellDef="let item" fxFlex="12%" (click)="updateTotal(item)">{{item.total}}</mat-cell>
       </ng-container>
       <ng-container matColumnDef="actions">
         <mat-header-cell *matHeaderCellDef fxFlex="15%">
-          <button (click)="exchange()" mat-button mat-icon-button matSuffix>
+          <button (click)="exchangeShoppingCart()" mat-button mat-icon-button matSuffix>
             <mat-icon color="primary">autorenew</mat-icon>
           </button>
         </mat-header-cell>
@@ -110,7 +98,7 @@
         </mat-cell>
       </ng-container>
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let item; columns: displayedColumns;"></mat-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
     </mat-table>
   </mat-card-content>
   <mat-card-content>
