--- a/src/app/shop/cashier-opened/shopping-cart/check-out-dialog.component.html
+++ b/src/app/shop/cashier-opened/shopping-cart/check-out-dialog.component.html
@@ -1,5 +1,5 @@
 <h2 mat-dialog-title>Total purchase: {{totalPurchase | currency:'EUR':'symbol'}}
-  <span *ngIf="uncommitted()"> - Total Pay: {{totalCommitted() | currency:'EUR':'symbol'}}</span>
+  <span *ngIf="unCommitted()"> - Total Pay: {{totalCommitted() | currency:'EUR':'symbol'}}</span>
 </h2>
 <mat-dialog-content>
     <span *ngIf="warning()">
@@ -49,7 +49,7 @@
   </div>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button cdkFocusInitial mat-dialog-close mat-raised-button>Cancel</button>
+  <button cdkFocusInitial [mat-dialog-close]="false" mat-raised-button>Cancel</button>
   <button (click)="pay()" [disabled]="invalidCheckOut()" color="accent" mat-raised-button>Pay
     <span *ngIf="invalidCheckOut()" class="mat-suffix">( => {{totalCommitted()}})</span>
   </button>
