removed dependence app to shared

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -60,3 +60,5 @@
   <mat-grid-tile>Welcome to {{title}} <strong> -> News...</strong></mat-grid-tile>
 </mat-grid-list>
 
+<app-footer></app-footer>
+
