--- a/src/app/shop/cashier-opened/shopping-cart/shopping-cart.component.html
+++ b/src/app/shop/cashier-opened/shopping-cart/shopping-cart.component.html
@@ -10,7 +10,7 @@
           <mat-icon>add_circle</mat-icon>
         </button>
       </form>
-      <app-search-by-barcode (add)="addBarcode($event)" [barcode]="barcode"></app-search-by-barcode>
+      <app-search-by-barcode (add)="addBarcode($event)"></app-search-by-barcode>
       <button color="primary" disabled="disabled" mat-icon-button>
         <mat-icon>category</mat-icon>
       </button>
