--- a/src/app/shop/cashier-opened/shopping-cart/shopping-cart.component.html
+++ b/src/app/shop/cashier-opened/shopping-cart/shopping-cart.component.html
@@ -52,7 +52,7 @@
   <mat-card-content>
     <mat-table [dataSource]="shoppingCart" class="mat-elevation-z8">
       <ng-container matColumnDef="id">
-        <mat-header-cell *matHeaderCellDef fxFlex="5%">{{indexShoppingCart+1}} #</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef fxFlex="5%">{{indexShoppingCart + 1}} #</mat-header-cell>
         <mat-cell *matCellDef="let i = index" fxFlex="5%"> {{i + 1}}</mat-cell>
       </ng-container>
       <ng-container matColumnDef="description">
@@ -77,11 +77,11 @@
       </ng-container>
       <ng-container matColumnDef="discount">
         <mat-header-cell *matHeaderCellDef fxFlex="12%"> %</mat-header-cell>
-        <mat-cell *matCellDef="let item" fxFlex="12%" (click)="updateDiscount(item)">{{item.discount}}</mat-cell>
+        <mat-cell (click)="updateDiscount(item)" *matCellDef="let item" fxFlex="12%">{{item.discount}}</mat-cell>
       </ng-container>
       <ng-container matColumnDef="total">
         <mat-header-cell *matHeaderCellDef fxFlex="12%"> Total</mat-header-cell>
-        <mat-cell *matCellDef="let item" fxFlex="12%" (click)="updateTotal(item)">{{item.total}}</mat-cell>
+        <mat-cell (click)="updateTotal(item)" *matCellDef="let item" fxFlex="12%">{{item.total}}</mat-cell>
       </ng-container>
       <ng-container matColumnDef="actions">
         <mat-header-cell *matHeaderCellDef fxFlex="15%">
