--- a/src/app/shop/cashier-opened/shopping-cart/check-out-dialog.component.html
+++ b/src/app/shop/cashier-opened/shopping-cart/check-out-dialog.component.html
@@ -49,7 +49,7 @@
   </div>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button cdkFocusInitial [mat-dialog-close]="false" mat-raised-button>Cancel</button>
+  <button [mat-dialog-close]="false" cdkFocusInitial mat-raised-button>Cancel</button>
   <button (click)="pay()" [disabled]="invalidCheckOut()" color="accent" mat-raised-button>Pay
     <span *ngIf="invalidCheckOut()" class="mat-suffix">( => {{totalCommitted()}})</span>
   </button>
