added technical support

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -53,6 +53,10 @@
     <mat-icon>sentiment_very_dissatisfied</mat-icon>
     <span>Complaints</span>
   </button>
+  <button mat-menu-item>
+    <mat-icon>build</mat-icon>
+    <span>Technical Support</span>
+  </button>
 </mat-menu>
 <mat-toolbar class="center">
   <button [matMenuTriggerFor]="adviser" mat-button>Adviser</button>
