--- a/src/app/shared/components/footer.component.html
+++ b/src/app/shared/components/footer.component.html
@@ -27,11 +27,14 @@
       </mat-list-item>
       <mat-list-item>
         <mat-icon mat-list-icon>cloud_queue</mat-icon>
-        <div mat-line>Back-end-user - {{backEndUser}}</div>
+        <div mat-line>Back-end - Spring</div>
+        <div mat-line>User - {{backEndUser}}</div>
+        <div mat-line>Core - {{backEndCore}}</div>
       </mat-list-item>
       <mat-list-item>
         <mat-icon mat-list-icon>cloud_queue</mat-icon>
-        <div mat-line>Back-end-core - {{backEndCore}}</div>
+        <div mat-line>Back-end - Python</div>
+        <div mat-line>Customer Support - {{backEndCustomerSupport}}</div>
       </mat-list-item>
     </mat-list>
   </mat-grid-tile>
