tickets.component.html sin servicio #1

--- a/src/app/shop/cashier-opened/tickets/tickets.component.html
+++ b/src/app/shop/cashier-opened/tickets/tickets.component.html
@@ -1,1 +1,17 @@
-<p>ticket works!</p>
+<mat-card>
+  <mat-card-content>
+    <mat-label><strong>Filters: </strong></mat-label>
+    <mat-form-field>
+      <mat-label>Id, reference or mobile</mat-label>
+      <input [(ngModel)]="key" matInput>
+    </mat-form-field>
+    <button (click)="search()" mat-icon-button>
+      <mat-icon>search</mat-icon>
+    </button>
+    <button (click)="resetSearch()" mat-icon-button>
+      <mat-icon>close</mat-icon>
+    </button>
+  </mat-card-content>
+</mat-card>
+<app-crud (update)="update($event)" [data]="tickets"
+          [deleteAction]="false" [createAction]="false" [readAction]="false" [title]="title"></app-crud>
