--- a/src/app/shop/offers/offers.component.html
+++ b/src/app/shop/offers/offers.component.html
@@ -1,1 +1,23 @@
-<p>offers works!</p>
+<mat-card>
+  <mat-card-content>
+    <mat-label><strong>Filters: </strong></mat-label>
+    <mat-form-field>
+      <mat-label>Reference</mat-label>
+      <label>
+        <input [(ngModel)]="offerSearch.reference" matInput>
+      </label>
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Description</mat-label>
+      <label>
+        <input [(ngModel)]="offerSearch.description" matInput>
+      </label>
+    </mat-form-field>
+    <button (click)="search()" mat-icon-button>
+      <mat-icon>search</mat-icon>
+    </button>
+    <button (click)="resetSearch()" mat-icon-button>
+      <mat-icon>close</mat-icon>
+    </button>
+  </mat-card-content>
+</mat-card>
