list offers in "offers" menu

--- a/src/app/shop/offers/offers.component.html
+++ b/src/app/shop/offers/offers.component.html
@@ -21,3 +21,6 @@
     </button>
   </mat-card-content>
 </mat-card>
+<app-crud [data]="offers" [createAction]="false" [readAction]="false" [updateAction]="false" [deleteAction]="false"
+          [title]="title">
+</app-crud>
