--- a/src/app/shop/offers/offers.component.html
+++ b/src/app/shop/offers/offers.component.html
@@ -21,7 +21,7 @@
     </button>
   </mat-card-content>
 </mat-card>
-<app-crud (create)="create()" (update)="update($event)" [data]="offers"
-          [readAction]="false" [deleteAction]="false"
+<app-crud (create)="create()" (update)="update($event)" (read)="print($event)" [data]="offers"
+          [deleteAction]="false"
           [title]="title">
 </app-crud>
