Add Articles-family crud, interface and service. issue #7

--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -98,7 +98,7 @@
     <mat-icon>view_list</mat-icon>
     <span>Articles</span>
   </button>
-  <button disabled="disabled" mat-menu-item routerLink="">
+  <button mat-menu-item routerLink="/shop/articles-family">
     <mat-icon>category</mat-icon>
     <span>Articles Family</span>
   </button>
