--- a/src/app/shop/cashier-opened/shopping-cart/article-family-view/article-family-view.component.html
+++ b/src/app/shop/cashier-opened/shopping-cart/article-family-view/article-family-view.component.html
@@ -1,1 +1,42 @@
-<p>article-family-view works!</p>
+<div class="content">
+  <div fxLayout="row wrap" fxLayoutGap="16px grid">
+    <div [fxFlex]="(100/3) + '%'" fxFlex.xs="100%" fxFlex.sm="33%"
+         *ngFor="let dcard of cardData">
+
+      <mat-card *ngIf="dcard.type=='composite'" (click)="updateArray()"
+                class="mat-elevation-z4 composite centered">
+        <mat-card-header>
+          <mat-icon>category</mat-icon>
+          <mat-card-title>
+            {{dcard.title}}
+          </mat-card-title>
+        </mat-card-header>
+      </mat-card>
+
+      <mat-card *ngIf="dcard.type=='size'" (click)="openSizes()"
+                class="mat-elevation-z4 composite centered">
+        <mat-card-header>
+          <mat-icon> format_size</mat-icon>
+          <mat-card-title>
+            {{dcard.title}}
+          </mat-card-title>
+        </mat-card-header>
+      </mat-card>
+
+      <mat-card *ngIf="dcard.type=='leaf'" class="mat-elevation-z4 leaf">
+        <mat-card-header>
+          <mat-card-title>{{dcard.title}}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <p style="text-align: right">
+            {{dcard.price}}€
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-raised-button color="primary">ADD TO CARD</button>
+        </mat-card-actions>
+      </mat-card>
+
+    </div>
+  </div>
+</div>
