--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -124,7 +124,7 @@
   </button>
 </mat-menu>
 <mat-menu #stock="matMenu">
-  <button disabled="disabled" mat-menu-item routerLink="/home/stock-alarm">
+  <button mat-menu-item routerLink="/shop/stock-alarms">
     <mat-icon>alarm</mat-icon>
     <span>Stock Alarm</span>
   </button>
