--- a/src/app/shop/cashier-opened/shopping-cart/check-out-dialog.component.html
+++ b/src/app/shop/cashier-opened/shopping-cart/check-out-dialog.component.html
@@ -38,7 +38,7 @@
   <mat-checkbox [(ngModel)]="requestedInvoice" [disabled]="invalidInvoice()">
     <span> Create Invoice</span>
   </mat-checkbox>
-  <mat-checkbox [(ngModel)]="requestedGiftTicket" [disabled]="true">
+  <mat-checkbox [(ngModel)]="requestedGiftTicket" [disabled]="false">
     <span>Create Gift Ticket</span>
   </mat-checkbox>
   <mat-checkbox [(ngModel)]="requestedDataProtectionAct" [disabled]="true">
