Add credit-line dialog created

--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -158,7 +158,7 @@
     <mat-icon>message</mat-icon>
     <span>Messengers</span>
   </button>
-  <button disabled="disabled" mat-menu-item routerLink="">
+  <button (click)="creditLine()" mat-menu-item>
     <mat-icon>card_membership</mat-icon>
     <span>Credit</span>
   </button>
