--- a/src/app/shop/cashier-opened/shopping-cart/check-out-dialog.component.html
+++ b/src/app/shop/cashier-opened/shopping-cart/check-out-dialog.component.html
@@ -35,6 +35,9 @@
       <mat-icon color="warn">local_offer</mat-icon>
     </button>
   </mat-form-field>
+  <mat-checkbox [disabled]="true">
+    <span> Usar línea de crédito</span>
+  </mat-checkbox>
   <mat-checkbox [(ngModel)]="requestedInvoice" [disabled]="invalidInvoice()">
     <span> Create Invoice</span>
   </mat-checkbox>
