Use credit-line option created in check-out dialog fix english

--- a/src/app/shop/cashier-opened/shopping-cart/check-out-dialog.component.html
+++ b/src/app/shop/cashier-opened/shopping-cart/check-out-dialog.component.html
@@ -36,7 +36,7 @@
     </button>
   </mat-form-field>
   <mat-checkbox [disabled]="true">
-    <span> Usar línea de crédito</span>
+    <span> Use credit-line</span>
   </mat-checkbox>
   <mat-checkbox [(ngModel)]="requestedInvoice" [disabled]="invalidInvoice()">
     <span> Create Invoice</span>
