Pay pending tickets (credit-line) dialog added #14

--- a/src/app/shop/cashier-opened/credit-line-pay-dialog.component.html
+++ b/src/app/shop/cashier-opened/credit-line-pay-dialog.component.html
@@ -1,4 +1,4 @@
-<h3 mat-dialog-title>Add credit-line</h3>
+<h3 mat-dialog-title>Pay pending tickets</h3>
 <mat-dialog-content>
 
 </mat-dialog-content>
