--- a/src/app/shop/users/users.component.html
+++ b/src/app/shop/users/users.component.html
@@ -1,1 +1,23 @@
-<p>users works!</p>
+<mat-card>
+  <mat-card-content>
+    <mat-label><strong>Filters: </strong></mat-label>
+    <mat-form-field>
+      <mat-label>Mobile</mat-label>
+      <input [(ngModel)]="userSearch.mobile" matInput>
+    </mat-form-field>
+    <button (click)="search()" mat-icon-button>
+      <mat-icon>search</mat-icon>
+    </button>
+    <button (click)="resetSearch()" mat-icon-button>
+      <mat-icon>close</mat-icon>
+    </button>
+    <mat-form-field>
+      <mat-label>Unfinished</mat-label>
+      <input [(ngModel)]="userSearch.mobile" matInput readonly>
+      <button (click)="unfinished()" mat-button mat-icon-button matSuffix>
+        <mat-icon>search</mat-icon>
+      </button>
+    </mat-form-field>
+  </mat-card-content>
+</mat-card>
+<app-crud [data]="users" [createAction]="false" [deleteAction]="false" [title]="title"></app-crud>
