Credit-line and credit models added and some changes in the interface #14

--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -160,7 +160,11 @@
   </button>
   <button (click)="creditLine()" mat-menu-item>
     <mat-icon>card_membership</mat-icon>
-    <span>Credit</span>
+    <span>Add credit-line</span>
+  </button>
+  <button (click)="creditLinePay()" mat-menu-item>
+    <mat-icon>card_membership</mat-icon>
+    <span>Pay pending tickets (credit-line)</span>
   </button>
 </mat-menu>
 <mat-menu #vat="matMenu">
