--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,6 +17,10 @@
       <mat-icon>person_outline</mat-icon>
       <span>Login</span>
     </button>
+    <button (click)="register()" *ngIf="!isAuthenticated()" mat-button>
+      <mat-icon>person_add_alt_1</mat-icon>
+      <span>Register</span>
+    </button>
     <button (click)="logout()" *ngIf="isAuthenticated()" mat-button>
       <span>{{username}}</span>
       <mat-icon>person_outline</mat-icon>
