--- a/src/app/shop/cashier-opened/tickets/ticket-editing-dialog.component.html
+++ b/src/app/shop/cashier-opened/tickets/ticket-editing-dialog.component.html
@@ -1,5 +1,8 @@
 <mat-card>
-  <mat-card-title>Shopping List</mat-card-title>
+  <mat-card-title>
+    <mat-icon color="primary">shopping_cart</mat-icon>
+    Shopping List {{totalShoppingList| currency:'EUR':'symbol'}}
+  </mat-card-title>
   <mat-card-content>
     <mat-table [dataSource]="shoppingList" class="mat-elevation-z8">
       <ng-container matColumnDef="id">
@@ -15,7 +18,7 @@
         <mat-cell *matCellDef="let item" fxFlex="11%">{{item.retailPrice}}</mat-cell>
       </ng-container>
       <ng-container matColumnDef="amount">
-        <mat-header-cell *matHeaderCellDef fxFlex="20%"> Nº</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef fxFlex="20%"> Amount</mat-header-cell>
         <mat-cell *matCellDef="let item" fxFlex="20%">
           <button (click)="decreaseAmount(item)" color="accent" mat-icon-button>
             <mat-icon>remove_circle_outline</mat-icon>
