--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -70,6 +70,9 @@
     <button mat-menu-item>New</button>
   </mat-menu>
   <button mat-button>Top 5</button>
+  <button mat-button routerLink="/home/offers">
+    <span>Offers</span>
+  </button>
 </mat-toolbar>
 
 <router-outlet></router-outlet>
