Finished layout of reviews, fixed some problems with score & finished mocks #3

--- a/src/app/home/reviews/reviews.component.html
+++ b/src/app/home/reviews/reviews.component.html
@@ -1,14 +1,14 @@
-<main style="display: flex">
-  <mat-card *ngFor="let review of searchAll() | async">
+<main class="flex-container">
+  <mat-card *ngFor="let review of searchAll() | async" class="card-container">
     <mat-card-header>
       <mat-card-title>Barcode: {{review.articleBarcode}}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <textarea matInput placeholder="Ex. It makes me feel..." [value]="review.opinion"></textarea>
+      <textarea matInput placeholder="Ex. It makes me feel..." [(ngModel)]=review.opinion></textarea>
     </mat-card-content>
     <mat-card-actions>
-      <app-score-bar [score]="review.score"></app-score-bar>
-      <button mat-stroked-button (click)="saveReview(review)">Save</button>
+      <app-score-bar [(score)]=review.score></app-score-bar>
+      <button mat-stroked-button (click)="update(review)">Save</button>
     </mat-card-actions>
   </mat-card>
 </main>
