--- a/src/app/shop/cashier-opened/shopping-cart/article-family-view/article-family-view.component.html
+++ b/src/app/shop/cashier-opened/shopping-cart/article-family-view/article-family-view.component.html
@@ -3,33 +3,33 @@
     <div [fxFlex]="(100/3) + '%'" fxFlex.xs="100%" fxFlex.sm="33%"
          *ngFor="let dcard of cardData">
 
-      <mat-card *ngIf="dcard.type=='composite'" (click)="updateArray()"
+      <mat-card *ngIf="dcard.type=='composite'" (click)="updateArray(dcard)"
                 class="mat-elevation-z4 composite centered">
         <mat-card-header>
           <mat-icon>category</mat-icon>
           <mat-card-title>
-            {{dcard.title}}
+            {{dcard.description}}
           </mat-card-title>
         </mat-card-header>
       </mat-card>
 
-      <mat-card *ngIf="dcard.type=='size'" (click)="openSizes()"
+      <mat-card *ngIf="dcard.type=='size'" (click)="openSizes(dcard)"
                 class="mat-elevation-z4 composite centered">
         <mat-card-header>
           <mat-icon> format_size</mat-icon>
           <mat-card-title>
-            {{dcard.title}}
+            {{dcard.description}}
           </mat-card-title>
         </mat-card-header>
       </mat-card>
 
       <mat-card *ngIf="dcard.type=='leaf'" class="mat-elevation-z4 leaf">
         <mat-card-header>
-          <mat-card-title>{{dcard.title}}</mat-card-title>
+          <mat-card-title>{{dcard.description}}</mat-card-title>
         </mat-card-header>
         <mat-card-content>
           <p style="text-align: right">
-            {{dcard.price}}€
+            {{dcard.retailPrice}}€
           </p>
         </mat-card-content>
         <mat-card-actions>
