--- a/src/app/shop/articles-family/articles-family/articles-family.component.html
+++ b/src/app/shop/articles-family/articles-family/articles-family.component.html
@@ -1,8 +1,9 @@
+<!--
 <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
-  <!-- This is the tree node template for leaf nodes -->
+  &lt;!&ndash; This is the tree node template for leaf nodes &ndash;&gt;
   <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
     <li class="mat-tree-node">
-      <!-- use a disabled button to provide padding for tree leaf -->
+      &lt;!&ndash; use a disabled button to provide padding for tree leaf &ndash;&gt;
       <button mat-icon-button disabled></button>
       {{node.name}}
 
@@ -20,7 +21,7 @@
     </li>
   </mat-tree-node>
 
-  <!-- This is the tree node template for expandable nodes -->
+  &lt;!&ndash; This is the tree node template for expandable nodes &ndash;&gt;
   <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
     <li>
       <div class="mat-tree-node">
@@ -52,3 +53,4 @@
 
   </mat-nested-tree-node>
 </mat-tree>
+-->
