--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -62,7 +62,7 @@
     <mat-icon>account_balance_wallet</mat-icon>
     <span>Cash Movement</span>
   </button>
-  <button disabled="disabled" mat-menu-item routerLink="">
+  <button mat-menu-item routerLink="/shop/cashier-closure">
     <mat-icon>account_balance</mat-icon>
     <span>Cashier Closure</span>
   </button>
