--- a/src/app/shop/articles-family/articles-family/articles-family.component.html
+++ b/src/app/shop/articles-family/articles-family/articles-family.component.html
@@ -1,4 +1,3 @@
-<!--
 <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
   &lt;!&ndash; This is the tree node template for leaf nodes &ndash;&gt;
   <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
@@ -14,7 +13,7 @@
         <button mat-button mat-icon-button matSuffix>
           <mat-icon color="warn">mode_edit</mat-icon>
         </button>
-        <button (click)="deleteNode(node)" mat-button mat-icon-button matSuffix>
+        <button (click)="deleteFamilyArticle(node)" mat-button mat-icon-button matSuffix>
           <mat-icon color="warn">close</mat-icon>
         </button>
       </div>
@@ -40,7 +39,7 @@
           <button mat-button mat-icon-button matSuffix>
             <mat-icon color="warn">mode_edit</mat-icon>
           </button>
-          <button (click)="deleteNode(node)" mat-button mat-icon-button matSuffix>
+          <button (click)="deleteFamilyArticle(node)" mat-button mat-icon-button matSuffix>
             <mat-icon color="warn">close</mat-icon>
           </button>
         </div>
@@ -53,4 +52,4 @@
 
   </mat-nested-tree-node>
 </mat-tree>
--->
+
