--- a/src/app/shop/cashier-opened/shopping-cart/article-family-view/article-family-view.component.html
+++ b/src/app/shop/cashier-opened/shopping-cart/article-family-view/article-family-view.component.html
@@ -16,14 +16,14 @@
       <mat-card *ngIf="dcard.type=='size'" (click)="openSizes(dcard)"
                 class="mat-elevation-z4 composite centered">
         <mat-card-header>
-          <mat-icon> format_size</mat-icon>
+          <mat-icon>format_size</mat-icon>
           <mat-card-title>
             {{dcard.description}}
           </mat-card-title>
         </mat-card-header>
       </mat-card>
 
-      <mat-card *ngIf="dcard.type=='leaf'" class="mat-elevation-z4 leaf">
+      <mat-card *ngIf="dcard.retailPrice!=null" class="mat-elevation-z4 leaf">
         <mat-card-header>
           <mat-card-title>{{dcard.description}}</mat-card-title>
         </mat-card-header>
