--- a/src/app/shop/cashier-opened/shopping-cart/article-family-view/open-sizes-dialog.component.html
+++ b/src/app/shop/cashier-opened/shopping-cart/article-family-view/open-sizes-dialog.component.html
@@ -1,8 +1,12 @@
 <h3 mat-dialog-title>
-  <mat-icon color="warn">warning</mat-icon>
+  <mat-icon>format_size</mat-icon>
   Select the size
 </h3>
 <mat-dialog-actions>
-  <button color="primary" mat-dialog-close mat-raised-button>Cancel</button>
-  <button [mat-dialog-close]="true" mat-raised-button>Yes</button>
+  <div class="buttons" *ngFor="let size of sizes">
+    <button (click)="addShoppingCart(size)" color="primary" mat-dialog-close mat-raised-button>{{size}}</button>
+  </div>
 </mat-dialog-actions>
+<div class="cancelButton">
+  <button [mat-dialog-close]="true" mat-raised-button>Cancel</button>
+</div>
