--- a/src/app/home/adviser/adviser.component.html
+++ b/src/app/home/adviser/adviser.component.html
@@ -1,5 +1,9 @@
 <mat-grid-list cols="1" rowHeight="4:1">
-  <mat-grid-tile>Welcome to TPV <strong> -> News...</strong></mat-grid-tile>
+  <carousel>
+    <mat-grid-tile>Welcome to TPV <strong> -> News...</strong></mat-grid-tile>
+    <mat-grid-tile>TO DO <strong> Top 5 Products </strong></mat-grid-tile>
+  </carousel>
+
 </mat-grid-list>
 
 
