--- a/src/app/home/adviser/adviser.component.html
+++ b/src/app/home/adviser/adviser.component.html
@@ -1,7 +1,12 @@
 <mat-grid-list cols="1" rowHeight="4:1">
+
   <carousel>
-    <mat-grid-tile>Welcome to TPV <strong> -> News...</strong></mat-grid-tile>
-    <mat-grid-tile>TO DO <strong> Top 5 Products </strong></mat-grid-tile>
+    <div class="carousel-cell" *ngFor="let article of newArticle; let i = index;">
+      <strong>Article number {{i+1}} <br></strong>
+      <strong>Barcode: </strong> {{article.barcode}} <br>
+      <strong>Description: </strong> {{article.description}} <br>
+      <strong>Retail price: </strong> {{article.retailPrice}}
+    </div>
   </carousel>
 
 </mat-grid-list>
