Credit-line interfaces some fixes #14

--- a/src/app/shop/cashier-opened/credit-line-pay-dialog.component.html
+++ b/src/app/shop/cashier-opened/credit-line-pay-dialog.component.html
@@ -7,7 +7,7 @@
   <div *ngIf="user" style="font-size: x-small; margin-left: 30vw;">
     <mat-checkbox (change)="payByCash()" [checked]="cash" style="margin-right: 2vw; margin-top: 2vw;">Cash</mat-checkbox>
     <mat-checkbox (change)="payByCard()" [checked]="card">Card</mat-checkbox>
-    <p style="margin-top: 1vw;">TOTAL: {{total}}€</p>
+    <p style="margin-top: 1vw; font-size: xx-large;">TOTAL: {{total}}€</p>
   </div>
 </mat-dialog-content>
 <mat-dialog-actions style="margin-top: -1vw;">
