--- a/src/app/shop/cashier-opened/shopping-cart/check-out-dialog.component.html
+++ b/src/app/shop/cashier-opened/shopping-cart/check-out-dialog.component.html
@@ -35,7 +35,7 @@
       <mat-icon color="warn">local_offer</mat-icon>
     </button>
   </mat-form-field>
-  <mat-checkbox (change)="useCreditLine()" [disabled]="!credit">
+  <mat-checkbox (change)="useCreditLine()" [disabled]="!credit" [checked]="checkedCreditLine">
     <span> Use credit-line</span>
   </mat-checkbox>
   <mat-checkbox [(ngModel)]="requestedInvoice" [disabled]="invalidInvoice()">
