--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,7 +30,7 @@
       <mat-icon>account_box</mat-icon>
       <span>Profile</span>
     </button>
-    <button (click)="cart()" mat-button>
+    <button (click)="cart()" mat-button routerLink="/home/shopping-basket">
       <mat-icon matBadge="3" matBadgeColor="accent" matBadgeOverlap="false" matBadgeSize="medium">shopping_cart
       </mat-icon>
     </button>
