--- a/src/app/shop/cashier-opened/tickets/ticket-editing-dialog.component.html
+++ b/src/app/shop/cashier-opened/tickets/ticket-editing-dialog.component.html
@@ -35,10 +35,13 @@
         <mat-cell *matCellDef="let item" fxFlex="12%">{{item.total}}</mat-cell>
       </ng-container>
       <ng-container matColumnDef="actions">
-        <mat-header-cell *matHeaderCellDef fxFlex="12%"> State</mat-header-cell>
-        <mat-cell *matCellDef="let item" fxFlex="12%">
-          <mat-checkbox (change)="changeCommitted(item)" [checked]="checkboxState(item.state)"
-                        [disabled]="item.amount<0"></mat-checkbox>
+        <mat-header-cell *matHeaderCellDef fxFlex="15%"> State</mat-header-cell>
+        <mat-cell *matCellDef="let item" fxFlex="15%">
+          <mat-select [(ngModel)]="item.state" [disabled]="item.amount<0">
+            <mat-option *ngFor="let state of stateValues" [value]="state">
+              {{state}}
+            </mat-option>
+          </mat-select>
         </mat-cell>
       </ng-container>
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
