#28 added user form

--- a/src/app/shared/components/profile-settings/profile-settings.component.html
+++ b/src/app/shared/components/profile-settings/profile-settings.component.html
@@ -1,10 +1,63 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+<main class="flex-container">
+  <mat-card>
+    <mat-card-title>
+      Profile Settings
+    </mat-card-title>
+    <mat-card-content>
+      <form>
+        <table>
+          <tr>
+            <td>
+              <mat-form-field class="demo-full-width">
+                <input matInput placeholder="First Name">
+              </mat-form-field>
+            </td>
+            <td>
+              <mat-form-field class="demo-full-width">
+                <input matInput placeholder="Last Name">
+              </mat-form-field>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <mat-form-field>
+                <input [(ngModel)]="mobile" matInput placeholder="Mobile" type="text"/>
+              </mat-form-field>
+            </td>
+            <td colspan="2">
+              <mat-form-field class="demo-full-width">
+                <textarea matInput placeholder="Address" matTextareaAutosize matAutosizeMinRows="2"
+                          matAutosizeMaxRows="5"></textarea>
+              </mat-form-field>
+            </td>
+          </tr>
+          <tr>
+            <td colspan="2">
+              <mat-form-field class="demo-full-width">
+                <input matInput [matDatepicker]="picker" placeholder="Date of birth">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker touchUi="true" #picker></mat-datepicker>
+              </mat-form-field>
+            </td>
+          </tr>
+          <tr>
+            <td><br>
+              <mat-form-field>
+                <input matInput [readonly]="!editable" [matDatepicker]="picker" placeholder="Date of creation">
+              </mat-form-field>
+            </td>
+          </tr>
+          <tr>
+            <td colspan="2" class="content-center">
+              <button mat-raised-button color="accent">Submit</button>
+              <button mat-raised-button color="accent">Clear</button>
+            </td>
+          </tr>
 
-</body>
-</html>
+
+        </table>
+      </form>
+
+    </mat-card-content>
+  </mat-card>
+</main>
