--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -37,7 +37,7 @@
   </div>
 </mat-toolbar>
 <mat-menu #profile="matMenu" xPosition="before">
-  <button mat-menu-item>
+  <button mat-menu-item routerLink="/home/settings">
     <mat-icon>settings</mat-icon>
     <span>Settings</span>
   </button>
