Add app-crud stock-alarms issue #8 Add component dialog creating-updating (skeleton)

--- a/src/app/shop/stock-alarms/stock-alarms.component.html
+++ b/src/app/shop/stock-alarms/stock-alarms.component.html
@@ -1,2 +1,5 @@
-<p>stock-alarms works!</p>
-<p>by David!</p>
+<p>DEV MODE</p>
+<p>by David v0.1.0</p>
+
+<app-crud (create)="create()" (read)="read($event)" (update)="update($event)"
+           [data]="data" deleteAction="false" [title]="title" [updateAction]="false"></app-crud>
