--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -66,10 +66,10 @@
   <button [matMenuTriggerFor]="adviser" mat-button>Adviser</button>
   <mat-menu #adviser="matMenu">
     <button mat-menu-item>Sale</button>
-    <button mat-menu-item>Popular</button>
-    <button mat-menu-item>New</button>
+    <button mat-menu-item routerLink="/home/adviser">Popular</button>
+    <button mat-menu-item routerLink="/home/adviser">New</button>
   </mat-menu>
-  <button mat-button>Top 5</button>
+  <button mat-button routerLink="/home/top5">Top 5</button>
   <button mat-button routerLink="/home/offers">
     <span>Offers</span>
   </button>
