--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -172,7 +172,7 @@
     <mat-icon>money</mat-icon>
     <span>Quarter VAT</span>
   </button>
-  <button disabled="disabled" mat-menu-item routerLink="/home/stock-management">
+  <button mat-menu-item routerLink="/shop/provider-invoices">
     <mat-icon>local_shipping</mat-icon>
     <span>Provider Invoice</span>
   </button>
