--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -128,7 +128,7 @@
     <mat-icon>alarm</mat-icon>
     <span>Stock Alarm</span>
   </button>
-  <button disabled="disabled" mat-menu-item routerLink="/home/stock-management">
+  <button mat-menu-item routerLink="/home/stock-management">
     <mat-icon>equalizer</mat-icon>
     <span>Stock Management</span>
   </button>
