--- a/src/app/shop/cashier-opened/shopping-cart/shopping-cart.component.html
+++ b/src/app/shop/cashier-opened/shopping-cart/shopping-cart.component.html
@@ -107,7 +107,7 @@
       Checkout
       <mat-icon>euro_symbol</mat-icon>
     </button>
-    <button (click)="createBudget()" color="primary" disabled="disabled" mat-raised-button>
+    <button (click)="createBudget()" color="primary" [disabled]="isEmpty()" mat-raised-button>
       <mat-icon>description</mat-icon>
       Budget
     </button>
