#28 added shop profile settings

--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -9,7 +9,7 @@
       <mat-icon>person</mat-icon>
       <span>Logout</span>
     </button>
-    <button mat-button>
+    <button mat-button routerLink="/shop/profile">
       <mat-icon>account_box</mat-icon>
       <span>Profile</span>
     </button>
